# migration-utility

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  kraken-error-codes-reference.md  kraken-schema-reference.md  migration-utility-plugin-schema-ui.html  plugin-schema-design.md  pyproject.toml  requirements.txt  target_cmp_data_dictionary.md  vercel.json
alembic/: env.py
api/: index.py
docs/: ACCOUNT_HEALTH_STRATEGY.md  AI_ASSISTED_MIGRATION.md  ARCHITECTURE_UI_STATUS.md  CAPABILITY_MATRIX.md  CLIENT_PRESENTATION.md  CUSTOMER_FAQ_RFP.md  DEPLOYMENT_RUNNER.md  FUNCTIONAL_SPECIFICATION.docx  FUNCTIONAL_SPECIFICATION.md  HIGH_VOLUME_MIGRATION.md  PROJECT_DOCUMENTATION.md  STW_TRANSFORM_RULES.md  architecture_comparison.html
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.js
migration_utility/: __init__.py  config.py  main.py
samples/: accounts.csv  accounts.json  accounts_with_errors.csv  destination_schema_example.json  source_fields.csv  target_fields_kraken.csv
scripts/: setup_production_db.sh
tests/: conftest.py  test_account_health.py  test_ai_assisted.py  test_api.py  test_chunked_pipeline.py  test_destination_plugins.py  test_enterprise.py  test_field_catalog.py  test_field_catalog_api.py  test_idempotency.py  test_ingest.py  test_ingest_api.py  test_kraken_adapter.py  test_load_audit.py  test_load_executor.py  test_mapping_api.py  test_parsers.py  test_pipeline.py  test_reconciliation_api.py  test_rules_api.py  (+9 more)
(+204 files in other folders)
