[project]
name = "migration-utility"
version = "0.11.0"
description = "Generic data migration engine — Phase 0 foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "mangum>=0.19.0",
    "pyjwt>=2.8.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
ai = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["migration_utility*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
